--- a/CVS_Review/app/src/main/res/values/colors.xml
+++ b/CVS_Review/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#D9F1F1</color>
+    <color name="colorPrimaryDark">#B6E3E9</color>
+    <color name="colorAccent">#8CC1D3</color>
 </resources>
