--- a/CVS_Review/app/src/main/res/layout/activity_barcode.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_barcode.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#D9F1F1"
     android:backgroundTint="#D9F1F1"
-    tools:context=".BarcodeActivity">
+    tools:context=".BarcodeScanActivity">
 
     <TextView
         android:id="@+id/textView2"
