앱 아이콘 추가 및 앱 이름 변경
- #계정정보, #상품목록 margin 값 10dp 줬습니다

--- a/CVS_Review/app/src/main/res/layout/activity_main.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/maplestorybold"
+                android:layout_marginStart="10dp"
                 android:text="#계정정보"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -94,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/maplestorybold"
+                android:layout_marginStart="10dp"
                 android:text="#상품목록"
                 android:textSize="20sp" />
         </LinearLayout>
