floatingbutton 수정, action bar 수정

--- a/CVS_Review/app/src/main/res/layout/activity_main.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:backgroundTint="#D9F1F1"
     tools:context=".MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:id="@+id/app_toolbar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -230,10 +236,11 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        app:fabCustomSize="85dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="25dp"
-        app:backgroundTint="#B6E3E9"
+        app:backgroundTint="#8CC1D3"
         app:srcCompat="@mipmap/ic_barcode_foreground" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
