--- a/CVS_Review/app/src/main/res/layout/activity_barcode.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_barcode.xml
@@ -8,13 +8,13 @@
     android:backgroundTint="#D9F1F1"
     tools:context=".BarcodeScanActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Barcode"
+    <SurfaceView
+        android:id="@+id/cameraSurface"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
