--- a/CVS_Review/app/src/main/res/layout/activity_main.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:layout_margin="10dp">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/tv_profile"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_margin="5dp"
