카카오 로그인 부분

--- a/CVS_Review/app/src/main/res/layout/activity_login.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_login.xml
@@ -27,17 +27,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.445"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" >
+
+    </com.google.android.gms.common.SignInButton>
 
     <com.kakao.usermgmt.LoginButton
-        android:layout_width="190dp"
-        android:layout_height="175dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="150dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/btn_Kakao_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="186dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
