--- a/CVS_Review/app/src/main/res/layout/activity_productspec.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_productspec.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#D9F1F1"
+    android:backgroundTint="#D9F1F1"
+    >
 
     <TextView
         android:id="@+id/barcode"
