--- a/CVS_Review/app/src/main/res/layout/activity_productlist.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_productlist.xml
@@ -7,39 +7,11 @@
     android:backgroundTint="#D9F1F1">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/editText_main_searchKeyword"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="0.5"
-                android:hint="검색할 제품명을 입력하세요"
-                android:inputType="text" />
-
-            <Button
-                android:id="@+id/button_main_search"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:text="검색" />
-
-            <Button
-                android:id="@+id/button_main_all"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:text="전체보기" />
-
-        </LinearLayout>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -59,5 +31,46 @@
         android:layout_margin="25dp"
         app:backgroundTint="#8CC1D3"
         app:srcCompat="@mipmap/ic_barcode_foreground" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_anchor="@+id/linearLayout"
+        app:layout_anchorGravity="center">
+
+        <EditText
+            android:id="@+id/editText_main_searchKeyword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="0.5"
+            android:elevation="0dp"
+            android:fontFamily="@font/maplestorylight"
+            android:hint=" 제품명을 입력하세요"
+            android:inputType="text" />
+
+        <Button
+            android:id="@+id/button_main_search"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.2"
+            android:backgroundTint="#8CC1D3"
+            android:fontFamily="@font/maplestorybold"
+            android:text="검색" />
+
+        <Button
+            android:id="@+id/button_main_all"
+            android:layout_width="2dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.3"
+            android:backgroundTint="#8CC1D3"
+            android:fontFamily="@font/maplestorybold"
+            android:text="전체보기" />
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
