--- a/CVS_Review/app/src/main/res/layout/product_recycler_view.xml
+++ b/CVS_Review/app/src/main/res/layout/product_recycler_view.xml
@@ -7,7 +7,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="394dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -32,7 +32,8 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:fontFamily="@font/maplestorylight"/>
+                android:fontFamily="@font/maplestorybold"
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/textView_list_PRODUCT_NAME"
@@ -41,7 +42,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginRight="10dp"
-                android:fontFamily="@font/maplestorylight"/>
+                android:fontFamily="@font/maplestorylight" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
