--- a/CVS_Review/app/src/main/res/layout/product_recycler_view.xml
+++ b/CVS_Review/app/src/main/res/layout/product_recycler_view.xml
@@ -7,7 +7,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="394dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -39,9 +39,9 @@
                 android:id="@+id/textView_list_PRODUCT_NAME"
                 android:layout_width="175dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:fontFamily="@font/maplestorylight" />
         </LinearLayout>
 
