--- a/CVS_Review/app/src/main/res/layout/comment_recycler_view.xml
+++ b/CVS_Review/app/src/main/res/layout/comment_recycler_view.xml
@@ -20,12 +20,15 @@
             android:layout_height="100dp"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView_product_image"
+            <TextView
+                android:id="@+id/textView_user_id"
                 android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_margin="10dp"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/maplestorybold"
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/textView_product_point"
