설정화면 구성
마이페이지 : 리사이클뷰를 사용하여 '내가 쓴 리뷰'를 보여줌
공지사항, 오픈소스라이선스 추가
개발자 문의 : 바로 개발자에서 전화걸수 있도록 구성

--- a/CVS_Review/app/src/main/res/layout/activity_productspec.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_productspec.xml
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/comment_list"
+        android:id="@+id/mycomment_list"
         android:layout_width="413dp"
         android:layout_height="422dp"
         app:layout_constraintEnd_toEndOf="parent"
