--- a/CVS_Review/app/src/main/res/layout/mycomment_recycler_view.xml
+++ b/CVS_Review/app/src/main/res/layout/mycomment_recycler_view.xml
@@ -21,8 +21,8 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView_user_info_id"
-                android:layout_width="80dp"
+                android:id="@+id/textView_product"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="40dp"
@@ -32,7 +32,7 @@
 
             <TextView
                 android:id="@+id/textView_product_point"
-                android:layout_width="80dp"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:fontFamily="@font/maplestorybold"
@@ -40,8 +40,8 @@
 
             <TextView
                 android:id="@+id/textView_comments"
-                android:layout_width="175dp"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="10dp"
